GS-10517 Fixed text wrapping in Care2 link in Chrome on Windows

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -4591,8 +4591,8 @@ margin:10px 0 14px 20px;
 }
 
 #schoolHeaderInfoLeft {
-    width: 509px;
-    margin-right: 12px;
+    width: 510px;
+    margin-right: 11px;
 }
 
 /* breadcrumbs */
